Fixing bug 259206. Force local documents to always be loaded as XML to fix problem with XML prettyprinting not working if the system incorrectly sets bogus mimetypes for .xsl files (as Fedora Core 2 happens to do). r+sr=peterv@propagandism.org